--- a/BeatSync-Client-Android/app/src/main/res/layout/activity_manage_tracks.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/activity_manage_tracks.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.astimefades.beatsyncandroid.MainActivity">
-
-    <include layout="@layout/content_main"/>
+    tools:context="com.astimefades.beatsyncandroid.ManageTracks">
 
 </android.support.constraint.ConstraintLayout>
