Fixed issues related to network connection failures and logging in
- Fixed an issue where failing to connect to a remote server would
cause an unexpected error. This error was not handled properly, but now
activities can react to it

- Fixed an issue where failing to connect to a remote server when a
user is already logged in did not set up sign up/login buttons. This
prevented users from trying to log in/sign up if a server was down

- Added a very simple list view to the ManageTracksActivity layout to
prepare for adding functionality to allow users to view existing
track/playlist data

--- a/BeatSync-Client-Android/app/src/main/res/layout/activity_manage_tracks.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/activity_manage_tracks.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.astimefades.beatsyncandroid.ManageTracks">
+    tools:context="com.astimefades.beatsyncandroid.ManageTracksActivity">
+
+    <include layout="@layout/content_manage_tracks"/>
 
 </android.support.constraint.ConstraintLayout>
