Working on T2, FAB with ListView underneath
- FAB click listener works properly

- Tracks in list are clickable

--- a/BeatSync-Client-Android/app/src/main/res/layout/content_manage_tracks.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/content_manage_tracks.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants">
 
     <ListView
         android:id="@+id/trackList"
@@ -12,11 +13,11 @@
     </ListView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/addTrackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
         android:focusable="true"
