T15 Bottom navigation bar
- Added in bottom navigation bar across all activities

- Need to figure out how to only switch the activity in the view above
the nav bar so we can have the nav bar persist between activities
properly

--- a/BeatSync-Client-Android/app/src/main/res/layout/activity_add_playlist.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/activity_add_playlist.xml
@@ -4,23 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.astimefades.beatsyncandroid.ManageTracksActivity">
-
-    <include layout="@layout/content_manage_tracks"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addTrackButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"
-        android:focusable="true"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+    tools:context="com.astimefades.beatsyncandroid.AddPlaylistActivity">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigation"
