--- a/BeatSync-Client-Android/app/src/main/res/layout/activity_edit_playlist_tracks.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/activity_edit_playlist_tracks.xml
@@ -8,4 +8,15 @@
 
     <include layout="@layout/content_edit_playlist_tracks" />
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:menu="@menu/bottom_nav_items" />
+
 </android.support.constraint.ConstraintLayout>
