T14 Added ability to create playlists
- Added ability to create playlist with name and tracks

- Fixed major bug in persistence layer Util where getting/removing
models from a list by Id was not comparing the passed in Id

--- a/BeatSync-Client-Android/app/src/main/res/layout/activity_add_playlist.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/activity_add_playlist.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.astimefades.beatsyncandroid.AddPlaylistActivity">
 
+    <include layout="@layout/content_add_playlist"/>
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
