--- a/BeatSync-Client-Android/app/src/main/res/layout/content_edit_playlist_tracks.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/content_edit_playlist_tracks.xml
@@ -20,7 +20,7 @@
             android:id="@+id/editPlaylistTracksName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
             android:layout_marginTop="13dp" />
     </RelativeLayout>
 
