T3 T4 Logout for persistence layer and Android app
- Users can now logout through the Android app

- Added “Account” tab to bottom navigation bar on Android client

--- a/BeatSync-Client-Android/app/src/main/res/layout/content_add_playlist.xml
+++ b/BeatSync-Client-Android/app/src/main/res/layout/content_add_playlist.xml
@@ -25,7 +25,7 @@
             android:layout_centerHorizontal="true"
             android:ems="10"
             android:inputType="text"
-            android:text="Name" />
+            android:hint="Name" />
 
         <ListView
             android:id="@+id/playlistTrackList"
